--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/external_libraries/hopscotch-map"]
 	path = src/external_libraries/hopscotch-map
 	url = https://github.com/Tessil/hopscotch-map
+[submodule "src/external_libraries/googletest"]
+	path = src/external_libraries/googletest
+	url = https://github.com/google/googletest
