freq_bp query cli

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ set(SOURCES
             src/cli/stats.cpp
             src/cli/query.cpp
 
+            src/queries/freq_bp.cpp
+
             src/common/json_helper.cpp
             src/common/h5_helper.cpp
             src/common/logger.cpp
