--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/external_libraries/googletest"]
 	path = src/external_libraries/googletest
 	url = https://github.com/google/googletest
+[submodule "src/external_libraries/rapid_json"]
+	path = src/external_libraries/rapid_json
+	url = https://github.com/Tencent/rapidjson.git
